--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
   <header class="header">
     <nav class="nav">
       <div class="logo">
-        <a href="https://estelzer.github.io/blog/" accesskey="h" title="Meu Blog (Alt + H)">Meu Blog</a>
+        <a href="/" accesskey="h" title="Meu Blog (Alt + H)">Meu Blog</a>
         <div class="logo-switches">
           <!-- botão para alternar o tema -->
         </div>
       </div>
       <ul id="menu">
-        <li><a href="https://estelzer.github.io/blog/" title="Início"><span>Início</span></a></li>
-        <li><a href="https://estelzer.github.io/blog/posts/" title="Posts"><span>Posts</span></a></li>
+        <li><a href="/" title="Início"><span>Início</span></a></li>
+        <li><a href="/posts/" title="Posts"><span>Posts</span></a></li>
       </ul>
     </nav>
   </header>
   <main class="main"></main>
   <footer class="footer">
-    <span>&copy; 2023 <a href="https://estelzer.github.io/blog/">Meu Blog</a></span>
+    <span>&copy; 2023 <a href="/">Meu Blog</a></span>
     <span>Powered by
       <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
       <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
